# orange-customer-churn-model

./: .gitignore  Makefile  README.md  environment.yml  pyproject.toml
.dvc/: config
data/interim/: .gitignore  correlation-matrix-elastic-impact-abf65b50.csv.dvc  correlation-matrix-scary-cut-cd34d065.csv.dvc  interim-data.parquet.dvc
data/processed/: .gitignore  X_test-lethal-whereas.parquet.dvc  X_train-lethal-whereas.parquet.dvc  continuous-pc-data-690-dysfunctional-consideration-706fac20.parquet.dvc  model-data-pca-chi2-obsolete-fold-f28f32e6.parquet.dvc  y_test-lethal-whereas.parquet.dvc  y_train-lethal-whereas.parquet.dvc
data/raw/: .gitignore  kddcup09-orange-telcom-data.parquet.dvc
docs/: mkdocs.yml
docs/docs/: index.md
notebooks/: Data Wrangling.ipynb  EDA.ipynb  Modeling.ipynb  Pre-processing and Training Data Dev.ipynb  Untitled.ipynb
zero_churn_model/: __init__.py  dataset.py  features.py  helpers.py  plots.py
zero_churn_model/modeling/: predict.py  train.py
